--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,5 +2,8 @@
   <strong>My Shop</strong>
 </header>
 <main class="p-4">
+  <nav>
+  <a routerLink="/login">Login</a>
+</nav>
   <router-outlet></router-outlet>
 </main>
